fix scrollbar

--- a/assets/css/category.css
+++ b/assets/css/category.css
@@ -219,7 +219,7 @@ gap: 24px;
   width: 36px;
 
 }
-.fa-chevron-right{
+.arrow_2b{
   color: #2b2b2b;
   font-size: 1.6rem;
 }
